# local_wikipedia

./: .gitignore  CLAUDE.md  EXTERNAL_API.md  PLAN.md  README.md  app.py  db.py  embed_jobs.py  embed_worker.py  example_query.py  get_article.py  jobs.py  paths.py  proxy_server.py  pyproject.toml  remote.py  render.py  requirements.txt  start.sh  start_proxy.sh  test_app.py  worker.py
app/: __init__.py  config.py  deps.py  helpers.py  lifespan.py  panels.py
arxiv/: __init__.py  chunker.py  download.py  embed.py  embed_paper.py  ingest.py  jobs.py  oai.py  render.py  retriever.py  schema.py  templates_meta.py
download/: download.py  download_katex.py  test_download.py
jobs/: embed.py  refresh.py
parse/: cli.py  parse.py  pipeline.py  refresh.py  schema.py  test_parse.py  test_wikitext_to_markdown.py  verify.py  wikitext_to_markdown.py  xml_reader.py
rag/: chunker.py  embed.py  embedder.py  generator.py  links.py  math.py  retriever.py  schema.py  tables.py
render/: __init__.py  blocks.py  data.py  inline.py  pipeline.py  protect.py  strip.py  tables.py  templates.py
scripts/: audit_render.py  calibrate_chunks.py
static/: app.js  style.css
templates/: _icons.html  _nav.html  _search_bar.html  _sidebar.html  _sidebar_jobs_count.html  _topbar.html  _wiki_chip.html  active_embedding.html  active_embedding_panel.html  article.html  arxiv.html  arxiv_active_embedding.html  arxiv_active_embedding_panel.html  arxiv_paper.html  arxiv_paper_actions.html  arxiv_paper_view.html  arxiv_results.html  base.html  chunks.html  embed_links2_widget.html  embed_manager.html  (+7 more)
(+48 files in other folders)
